manifests/apps/obsidian/obsidian.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obsidian
  namespace: apps
  labels:
    app: obsidian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obsidian
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: obsidian
    spec:
      containers:
        - name: obsidian
          image: lscr.io/linuxserver/obsidian:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: vault
              mountPath: /config
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 4000m
              memory: 2Gi
      volumes:
        - name: vault
          persistentVolumeClaim:
            claimName: obsidian-vault
        - name: tmp
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: obsidian
  namespace: apps
spec:
  selector:
    app: obsidian
  ports:
    - port: 3000

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: obsidian
  namespace: apps
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`obsidian.kwe2.org`)
      kind: Rule
      services:
        - name: obsidian
          port: 3000
  tls: {}
